<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_background"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingVertical="8dp" />

        <Button
            android:id="@+id/add_to_wishlist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginVertical="8dp"
            android:text="@string/add_to_wishlist" />

        <EditText
            android:id="@+id/comment_input"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/add_comment_hint" />

        <Button
            android:id="@+id/submit_comment_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/submit_comment" />

    </LinearLayout>
</ScrollView>
